--- a/estiloNoticia1.css
+++ b/estiloNoticia1.css
@@ -139,7 +139,6 @@ a {
 
 .site-footer {
   display: flex;
-  margin: 50px 0 0 0;
   width: 100%;
   background-color: #000000;
   text-align: center;
@@ -157,9 +156,11 @@ a {
   color: rgb(219, 219, 219);
   font-size: 5vh;
   text-align: center;
+  margin: 0.5%;
 }
 .contacto {
   color: rgb(219, 219, 219);
+  margin: 0.5%;
   font-size: 5vh;
   text-align: center;
 }
